--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-        <title>NoPaste - No-database paste service</title>
+        <title>Note - Not Expiring Note</title>
         <link
             rel="stylesheet"
             type="text/css"
@@ -24,7 +24,7 @@ npm/microtip@0.2.2/microtip.min.css
         <meta
             name="description"
             property="og:description"
-            content="NoPaste is a client-side paste service which works with no database, and no back-end code. The data is stored entirely in the links and nowhere else"
+            content="Note is a client-side paste service which works with no database, and no back-end code. The data is stored entirely in the links and nowhere else"
         />
         <meta property="og:title" content="NoPaste - No-database paste service" />
         <meta property="og:image" content="https://cdn.jsdelivr.net/gh/bokub/nopaste@images/logo.png" />
@@ -60,7 +60,7 @@ npm/microtip@0.2.2/microtip.min.css
                     <a
                         href="javascript:void(0)"
                         class="mx-3"
-                        aria-label="Click to know more about NoPaste"
+                        aria-label="Click to know more about Note"
                         data-microtip-position="bottom"
                         role="tooltip"
                         data-micromodal-trigger="description-modal"
@@ -124,7 +124,7 @@ npm/microtip@0.2.2/microtip.min.css
             <div tabindex="-1" class="modal-overlay">
                 <div role="dialog" class="modal-content shadow-bottom p-3 m-3">
                     <div class="modal-close" data-micromodal-close><span class="icon-close"></span></div>
-                    <h2 class="mt-0">What is NoPaste?</h2>
+                    <h2 class="mt-0">What is Note?</h2>
 
                     <span class="pink">NoPaste</span> is an open-source website similar to Pastebin where you can store any piece of code,
                     and generate links for easy sharing<br /><br />
@@ -147,8 +147,8 @@ npm/microtip@0.2.2/microtip.min.css
                     If you want to know more, you can find more information on
                     <a href="https://github.com/bokub/nopaste" rel="noopener" target="_blank" class="pink">GitHub</a>
                     <div class="additional-info">
-                        Note: NoPaste is an improved version of Topaz's
-                        <a href="https://topaz.github.io/paste" rel="noopener" target="_blank">Paste</a>
+                        Note: Note is an improved version of NoPaste
+                        <a href="https://github.com/bokub/nopaste" rel="noopener" target="_blank">Paste</a>
                     </div>
                 </div>
             </div>
@@ -157,7 +157,7 @@ npm/microtip@0.2.2/microtip.min.css
             <div tabindex="-1" class="modal-overlay">
                 <div role="dialog" class="modal-content shadow-bottom p-3 m-3">
                     <div class="modal-close" data-micromodal-close><span class="icon-close"></span></div>
-                    NoPaste cannot decompress the URL<br /><br />
+                    Note cannot decompress the URL<br /><br />
                     It's possible that you clicked on an invalid link<br /><br />
                     Sorry about that
                 </div>
