--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ npm/bootstrap@4.6.1/dist/css/bootstrap-grid.min.css,
 npm/slim-select@1.27.1/dist/slimselect.min.css,
 npm/codemirror@5.65.5/lib/codemirror.min.css,
 npm/codemirror@5.65.5/addon/scroll/simplescrollbars.css,
-npm/codemirror@5.65.5/theme/dracula.min.css,
+npm/codemirror@5.65.5/theme/neat.min.css,
 npm/microtip@0.2.2/microtip.min.css
 "
         />
