--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@ npm/microtip@0.2.2/microtip.min.css
                     <a href="https://github.com/bokub/nopaste" rel="noopener" target="_blank" class="mx-3">Source</a>
                 </div>
                 <div class="col"></div>
+                <div class="col-auto my-1">
+                    <select id="language"></select>
+                </div>
                 <div class="col-auto">
                     <button
                         onclick="enableLineWrapping()"
