--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ npm/microtip@0.2.2/microtip.min.css
                 </div>
                 <div class="col"></div>
                 <div class="col-auto my-1">
-                    <select id="language"></select>
+                    <select id="language" disabled></select>
                 </div>
                 <div class="col-auto">
                     <button
