--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@ npm/microtip@0.2.2/microtip.min.css
                     >
                 </div>
                 <div class="col"></div>
-                
+                <div class="col-auto my-1">
+                </div>
                 <div class="col-auto">
                     <button
                         onclick="disableLineWrapping()"
