--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ npm/microtip@0.2.2/microtip.min.css
                         data-microtip-position="bottom"
                         role="tooltip"
                         data-micromodal-trigger="description-modal"
-                        >About</a
+                        >Abouty</a
                     >
                 </div>
                 <div class="col"></div>
