--- a/index.html
+++ b/index.html
@@ -61,12 +61,10 @@ npm/microtip@0.2.2/microtip.min.css
                         data-microtip-position="bottom"
                         role="tooltip"
                         data-micromodal-trigger="description-modal"
-                        >Abouty</a
+                        >Abouty1</a
                     >
                 </div>
-                <div class="col"></div>
-                <div class="col-auto my-1">
-                </div>
+                
                 <div class="col-auto">
                     <button
                         onclick="disableLineWrapping()"
