--- a/index.html
+++ b/index.html
@@ -61,10 +61,37 @@ npm/microtip@0.2.2/microtip.min.css
                         data-microtip-position="bottom"
                         role="tooltip"
                         data-micromodal-trigger="description-modal"
-                        >Abouty2</a
+                        >About</a
                     >
                 </div>
-                
+                <div class="col"></div>
+                <div class="col-auto my-1">
+                    <select id="language" disabled></select>
+                </div>
+                <div class="col-auto">
+                    <button
+                        onclick="disableLineWrapping()"
+                        type="button"
+                        id="disable-line-wrapping"
+                        aria-label="Disable line wrapping"
+                        data-microtip-position="bottom"
+                        role="tooltip"
+                        class="hidden"
+                    >
+                        <span class="icon-wrap-text"></span>
+                    </button>
+                    <button
+                        onclick="enableLineWrapping()"
+                        type="button"
+                        id="enable-line-wrapping"
+                        aria-label="Enable line wrapping"
+                        data-microtip-position="bottom"
+                        role="tooltip"
+                    >
+                        <span class="icon-notes"></span>
+                    </button>
+                </div>
+
                 
                 <div class="col-auto">
                     <button class="py-1 px-2 mx-0 my-1" onclick="generateLink('url')" type="button">
